fix: remove horizontal scroll

--- a/online-zoo/assets/styles/style.css
+++ b/online-zoo/assets/styles/style.css
@@ -1110,6 +1110,9 @@ main {
     margin-left: 90px;
     margin-right: 30px;
   }
+  .footer__inner {
+    overflow-x: hidden;
+  }
   .friend {
       padding: 30px 0 50px
   }
